mule-user-guide/v/3.5/downloading-and-starting-mule-esb.adoc
= Downloading and Starting Mule ESB

== Downloading and Launching Mule 

[tabs]
------
[tab,title="Anypoint Studio"]
....
. Before installing Anypoint Studio, be sure to install  link:http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html[Java SE Development Kit 7] on your host machine, refer to
link:/mule-user-guide/v/3.5/hardware-and-software-requirements[Hardware and Software Requirements] for reference. See also xref:runningstudioonamac[Running Studio on a Mac].
+
image:anypoint_Studio.png[anypoint_Studio]
+
. Set your `JAVA_HOME` environment variable to the path in which you installed the JDK.
. Visit link:https://www.mulesoft.com/platform/studio[mulesoft.com] to download *Mule ESB Enterprise with Anypoint Studio*.
. Click to download the version of Studio that is compatible with your operating system: Windows, Mac, or Linux.
. Unzip the downloaded file to a directory on a hard drive located on your host machine. The *Anypoint Studio* folder or directory appears when the unzip operation completes.
. If using a Mac OS, double-click the *AnypointStudio.app* file, located in the *AnypointStudio* folder.
If using Windows, the *anypointStudio.exe* file, located in the *AnypointStudio* directory.
If using Linux, double-click the anypointStudio file icon, located in the AnypointStudio directory.
+
image:finder.png[finder]
+
. Click OK to accept the default workspace.
+
image:launcher.png[launcher]
+
. Studio launches, then displays a Welcome page. Click *Create a Project* to begin development immediately.
. Optional: link:/mule-user-guide/v/3.5/adding-community-runtime[Add the Community Runtime]
to your Studio instance.
. Optional: link:/mule-user-guide/v/3.5/installing-an-enterprise-license[Installing an Enterprise License] (recommended for running applications in production).

....
[tab,title="Mule EE Runtime + MMC (Trial Version)"]
....
. Install  link:http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html[Java SE Development Kit 7] on your host machine. Refer to
link:/mule-user-guide/v/3.5/hardware-and-software-requirements[Hardware and Software Requirements] for reference.
. Set your `JAVA_HOME` environment variable to the path in which you installed the JDK.
. Download and unzip link:https://www.mulesoft.com/platform/soa/mule-esb-enterprise[Mule Runtime]. See also xref:runningstudioonamac[Running Studio on a Mac] for additional Mac-related install information.
. Start Mule from the software download's `bin` folder by typing `./mule` for Mac and Linux, or `mule.bat` for Windows.
. Download and unzip the Mule Management Console (MMC) separately from link:https://www.mulesoft.com/dl/mmc[Mule Enterprise Management Center]
. Open a command line and navigate to the freshly extracted folder.
. From the terminal, run the appropriate startup command for your operating system.
.. Windows:
+
[source, code]
----
startup.bat
----
+
.. Linux or Mac:
+
[source, code]
----
./startup.sh
----
+
. Wait for Mule to start running, which may take a minute or two. MMC automatically deploys and starts running from an embedded Tomcat server. Once Mule and MMC are running, you should see a message similar to the following:
+
[source, code, linenums]
----
Mule running as PID=#####
Tomcat and MMC running as PID=#####
Finished starting Mule and MMC.
----
+
. The Mule startup messages displays the URL where Tomcat is serving the MMC application, for example `http://localhost:8585/mmc-3.5.0.` Use a Web browser to navigate to this URL.
. You are greeted by the MMC welcome screen, shown below. Log in with username `admin`, password `admin`.
+
image:mmc_welcome_screen.png[mmc_welcome_screen]
+
[NOTE]
To stop Mule, run the shutdown.sh script (or shutdown.bat if on Windows) from the root folder of your installation.

[TIP]
For full details on the different options for running the startup, shutdown and status scripts, see https://developer.mulesoft.com/docs/display/35X/Installing+the+Trial+Version+of+MMC[Installing the Trial Version of MMC].

[TIP]
The trial version is not suitable for running applications in production. To run applications in production, link:/mule-user-guide/v/3.5/installing-an-enterprise-license[Installing an Enterprise License].
....
[tab,title="Mule EE or CE Runtime"]
....
The steps below describe what you need to do to install and run Mule ESB, the same steps apply for both the Community runtime and the Enterprise runtime.

. Install link:http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html[Java SE Development Kit 7].
. Download and unzip link:https://www.mulesoft.com/platform/soa/mule-esb-enterprise[Mule ESB Enterprise].
. Start Mule from a command line by changing directory to where you unzipped the Mule software distribution and then changing to the `bin` directory. Type the `./mule` command for Mac or Linux, or type `mule.bat` for Windows.
+
Wait for Mule to start running, which may take a minute or two.
+
. To stop Mule, type *CTRL-C*.
....
------

[[runningstudioonamac]]
== Running Studio on a Mac

If you're using Mac OS X Mountain Lion, there are two extra considerations to be mindful of when running Anypoint Studio.

Java Runtime Environment

Check to confirm that Java runtime environment 7 is in place on your system. From the command line (Terminal app), run: java -version

The response should appear similar to the following:

[source, code, linenums]
----
java version "1.7.0_60"
Java(TM) SE Runtime Environment (build 1.7.0_60-b19)
Java HotSpot(TM) 64-Bit Server VM (build 24.60-b09, mixed mode)
----

If a Java runtime environment is not installed, the command triggers a prompt to install the JDK tools directly from Apple. Follow the instructions to download and install JDK  7.

*Application Execution*

By default, Mac OS X restricts execution of applications acquired outside the Apple App Store. Because you download Anypoint Studio outside the App Store, your system may prevent you from running Studio applications and issue a warning message advising you to change your security settings to proceed. *Note*: You must have Administrator privileges to adjust the security settings.

. On your Mac, open *System Preferences* and navigate to *Security & Privacy*.
. In the *General* tab, under "Allow applications downloaded from:" select the radio button for *Anywhere*.

== Downloading Enterprise Additions

If you are running *Anypoint Studio* with an *Enterprise runtime*, you can add additional modules to your Studio instance.

* link:/mule-user-guide/v/3.5/installing-anypoint-enterprise-security[Anypoint Enterprise Security] 
* link:/mule-user-guide/v/3.5/anypoint-connectors[Anypoint Connectors] 
* mailto:sales@mulesoft.com[Contact MuleSoft] to acquire entitlements to access the link:/mule-user-guide/v/3.5/mulesoft-enterprise-java-connector-for-sap-reference[SAP Connector] and/or link:/mule-user-guide/v/3.5/mule-high-availability-ha-clusters[High Availability Clustering]

== See Also

* Learn more about acquiring and installing an link:/mule-user-guide/v/3.5/installing-an-enterprise-license[Installing an Enterprise License].
* Read http://blogs.mulesoft.com/?s=one+studio[One Studio] that explains the Single Studio distribution.
* Get started with link:/mule-user-guide/v/3.5/mule-fundamentals[Mule Fundamentals].
* Learn more about the link:/mule-management-console/v/3.5[Mule Management Console].
* link:/mule-user-guide/v/3.5/installing-extensions[Extend Mule] with plugins, modules, runtimes and connectors.
* Access a list of all the link:/mule-user-guide/v/3.5/studio-update-sites[update sites] available for your version of Studio.
* Learn more about our new release strategy for CloudHub and Mule ESB.
