mule-user-guide/v/3.7/downloading-and-starting-mule-esb.adoc
= Downloading and Starting Mule ESB
:keywords: mule esb, esb, download, set up, deploy, on premises, on premise

Select one of the tabs below for instructions on how to install, configure and run your instance of Mule ESB.

== Downloading and Launching Mule 

[tabs]
------
[tab,title="Anypoint Studio"]
....

. Install either link:http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html[Java SE Development Kit 7] or link:http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html[JDK 8]. See also xref:runningstudioonamac[Running Studio on a Mac].
. Set your `JAVA_HOME` environment variable to the path where you installed the JDK.
. Download link:https://www.mulesoft.com/platform/studio[Anypoint Studio], which includes the Mule Runtime.
. Choose the version of Studio compatible with your operating system: Windows, Mac, or Linux.
. Unzip the downloaded file to a directory on a hard drive located on your host machine. The *Anypoint Studio* folder or directory appears when the unzip operation completes.
. If using a Mac, double-click the *AnypointStudio.app* file, located in the *AnypointStudio* folder.
If using Windows, the *anypointStudio.exe* file, located in the *AnypointStudio* directory. +
If using Linux, double-click the *Anypoint Studio* file icon, located in the *AnypointStudio* directory.
+
image:finder.png[finder]

. Click *OK* to accept the default workspace.
+
image:launcher.png[launcher]

. Studio launches, then displays a Welcome page. Click *Create a Project* to begin development immediately.

. _Optional_: link:/anypoint-studio/v/5/adding-community-runtime[Add Community runtime] to your Studio instance.

. _Optional_: link:/mule-user-guide/v/3.7/installing-an-enterprise-license[Acquire an Enterprise license] (recommended for running applications in production).

....
[tab,title="Mule EE Runtime + MMC"]
....

. Install either  link:http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html[Java SE Development Kit 7] or link:http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html[JDK 8]. See also xref:runningstudioonamac[Running Studio on a Mac].
. Set your `JAVA_HOME` environment variable to the path where you installed the JDK.
. Download link:https://www.mulesoft.com/platform/studio[Anypoint Studio], which includes the Mule Runtime.
. MMC is installed separately from Studio. link:https://www.mulesoft.com/dl/mmc[Download Mule Enterprise Management Console].
. Unzip the `mmc-distribution-mule-console-bundle-<version>.zip` file.
. From the `mmc-distribution-mule-console-bundle-<version>` directory at the command line, run either the`startup.bat` for Windows, or `startup.sh` for Mac and Linux.
. At the prompt, `Please enter the desired port for Mule [Default 7777]:` press Return to accept the default or type a new port number.
+
MMC displays its startup messages. Look for these:
+
** `Starting MMC. Please wait.`
** `Tomcat Started.`
** `initialization started`
** `MMC started`
+
After Mule and MMC are running, this message appears:
+
[source, code, linenums]
----
Mule running as PID=#####
Tomcat and MMC running as PID=#####
Finished starting Mule and MMC.
----
+
. The Mule startup message displays the URL where Tomcat is serving the MMC application, for example `http://localhost:8585/mmc-3.6.0`. Use a Web browser to navigate to this URL.
. You are greeted by the MMC welcome screen, shown below. Log in with username `admin`, password `admin`.
+
image:mmc_welcome_screen.png[mmc_welcome_screen]
+
[NOTE]
====
To stop Mule, run the `shutdown.sh` script (or `shutdown.bat` if on Windows) from the root folder of your installation.
====
+
[TIP]
====
For full details on the different options for running the startup, shutdown and status scripts, see link:/mule-management-console/v/3.7/installing-the-trial-version-of-mmc[Installing the Trial Version of MMC].
====
+
[TIP]
====
The trial version is not suitable for running applications in production. To run applications in production, link:/mule-user-guide/v/3.7/installing-an-enterprise-license[acquire an Enterprise license].
====
....
[tab,title="Mule EE or CE Runtime"]
....

The steps below describe what you need to do to install and run Mule ESB, the same steps apply for both the Community runtime and the Enterprise runtime.

. Install link:http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html[Java SE Development Kit 7] or link:http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html[JDK 8].
. Download and unzip link:https://www.mulesoft.com/platform/soa/mule-esb-enterprise[Mule ESB Enterprise].
. Start Mule from a command line by changing directory to where you unzipped the Mule software distribution and then changing to the `bin` directory. Type the `./mule` command for Mac or Linux, or type `mule.bat` for Windows.
+
Wait for Mule to start running, which may take a minute or two.
+
. To stop Mule, type *CTRL-C*.
....
------

[[runningstudioonamac]]
== Running Studio on a Mac

If you're using Mac OS, there are two extra considerations when running Anypoint Studio.

*Java Runtime Environment*

Check to confirm that the Java runtime environment 7 or 8 is in place on your system. From the command line (Terminal app), run: `java -version`

The JDK 7 response should appear similar to:

[source, code, linenums]
----
java version "1.7.0_55"
Java(TM) SE Runtime Environment (build 1.7.0_55-b13)
Java HotSpot(TM) 64-Bit Server VM (build 24.55-b03, mixed mode)
----

The JDK 8 response is similar to:

[source, code, linenums]
----
java version "1.8.0_51"
Java(TM) SE Runtime Environment (build 1.8.0_51-b16)
Java HotSpot(TM) 64-Bit Server VM (build 25.51-b03, mixed mode)
----

If a Java runtime environment is _not_ installed, the command triggers a prompt to install the JDK tools directly from Apple. Follow the instructions to download and install JDK 7 or 8.

*Application Execution*

By default, Mac OS X restricts execution of applications acquired outside the Apple App Store. Because you download Anypoint Studio _outside_ the App Store, your system may prevent you from running Studio applications and issue a warning message advising you to change your security settings to proceed. (Note: you must have Administrator privileges to adjust the security settings.)

. On your Mac, open *System Preferences*, then navigate to *Security & Privacy*.

. In the *General* tab, under "Allow applications downloaded from:", select the radio button for *Anywhere*.

== Downloading Enterprise Additions

If you are running *Anypoint Studio* with an *Enterprise runtime*, you can add additional modules to your Studio instance.

* link:/mule-user-guide/v/3.7/installing-anypoint-enterprise-security[Anypoint Enterprise Security] 

* link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint Connectors] 

* mailto:sales@mulesoft.com[Contact MuleSoft] to acquire entitlements to access the link:/mule-user-guide/v/3.7/mulesoft-enterprise-java-connector-for-sap-reference[SAP Connector] and/or link:/mule-user-guide/v/3.7/mule-high-availability-ha-clusters[High Availability Clustering]

== See Also

* Learn more about acquiring and installing an link:/mule-user-guide/v/3.7/installing-an-enterprise-license[Installing an Enterprise License].
* Read http://blogs.mulesoft.com/?s=one+studio[One Studio] that explains the Single Studio distribution.

* Get started with link:/mule-user-guide/v/3.7/mule-fundamentals[Mule Fundamentals].

* Learn more about the link:/mule-management-console/v/3.7[Mule Management Console].

* link:/anypoint-studio/v/5/installing-extensions[Extend Mule] with plugins, modules, runtimes, and connectors.

* Access a list of all the link:/anypoint-studio/v/5/studio-update-sites[update sites] available for your version of Studio.
